crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__phi3_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|system|>
You are a science tutor.<|end|>
<|user|>
What is ATP?<|end|>
<|assistant|>
