crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__raw_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
assertion_line: 32
expression: out
---
How does borrowing work?
