crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__raw_simple.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
What is the capital of France?
