crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__raw_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
assertion_line: 23
expression: out
---
What is ATP?
