crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__rwkv_world_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
User: Explain photosynthesis briefly.

Assistant:
