crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__rwkv_world_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
User: You are a science tutor.

Assistant: OK

User: What is ATP?

Assistant:
