crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__saiga_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|im_start|>system
Ты — Сайга, русскоязычный автоматический ассистент. Ты разговариваешь с людьми и помогаешь им.<|im_end|>
<|im_start|>user
Explain photosynthesis briefly.<|im_end|>
<|im_start|>assistant
