crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__smollm_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|im_start|>system
You are a helpful AI assistant.<|im_end|>
<|im_start|>user
Explain photosynthesis briefly.<|im_end|>
<|im_start|>assistant
