crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__solar_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
### System:
You are a science tutor.

### User:
What is ATP?

### Assistant:
