crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__starcoder_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
assertion_line: 228
expression: out
---
# You are a code assistant.
Now write a loop.
