crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__starcoder_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
assertion_line: 211
expression: out
---
Write a fibonacci function in Python.
